Kubernetes/k3s/traefik-middlewear-https/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/dedkola/app:20260330122205-83046e0 # {"$imagepolicy": "flux-system:app"}
          ports:
            - containerPort: 3000
